fix(phase1): help ordering, --pending filter, reject action, isOp cleanup
- LoreCommand: LinkedHashMap insertion order for deterministic help output
- LoreListSubCommand: --pending flag with admin/player visibility, isOp removed
- LoreApproveSubCommand: reject action via processRejection, DB fallback for
  unapproved entries not in cache, name+short-UUID lookup fixed for multi-word names
- LoreGetSubCommand: isOp removed, rvnklore.admin fallback only
- ILoreEntryRepository/LoreEntryRepository/LoreManager/DatabaseManager: add
  rejectLoreEntry(UUID/String) chain mirroring approveLoreEntry pattern

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>